=== HEAD

* Speed up dataset literalization by up to 100% (jeremyevans)

* Support :fractional_seconds Database option on MySQL 5.6.5+ to support fractional seconds by default (jeremyevans) (#797)

* Work around MySQL 5.6+ bug when combining DROP FOREIGN KEY and DROP INDEX in same ALTER TABLE statement (jeremyevans)

* Make auto_validations plugin handle models that select from subqueries (jeremyevans)

* Recognize additional disconnect errors in the postgres adapter (jeremyevans)

* Make import/multi_insert insert multiple rows in a single query using a UNION on Oracle, DB2, and Firebird (jeremyevans)

* Speed up association_pks many_to_many setter method by using Dataset#import (jeremyevans)

* Add Model.prepared_finder, similar to .finder but using a prepared statement (jeremyevans)

* Model.def_{add_method,association_dataset_methods,remove_methods} are now deprecated (jeremyevans)

* Model.eager_loading_dataset and Model.apply_association_dataset_opts are now deprecated (jeremyevans)

* Make prepared_statement_associations plugin handle one_through_one and one_through_many associations (jeremyevans)

* Use placeholder literalizer for regular association loading for up to 85% speedup (jeremyevans)

* Use placeholder literalizer for eager association loading for up to 20% speedup (jeremyevans)

* Make Model#marshallable! work correctly when using the tactical_eager_loading plugin (jeremyevans)

* Respect :foreign_key_constraint_name option when adding columns to existing table on MySQL (noah256) (#795)

* AssociationReflection#association_dataset now handles joining tables if necessary (jeremyevans)

* Support drop_view :if_exists option on SQLite, MySQL, H2, and HSQLDB (jeremyevans) (#793)

* Support drop_table :if_exists option on HSQLDB (jeremyevans)

* Add Database#transaction :auto_savepoint option, for automatically using a savepoint in nested transactions (jeremyevans)
