@@ -219,6 +219,7 @@ module Sequel
   COLUMN_REF_RE1 = /\A((?:(?!__).)+)__((?:(?!___).)+)___(.+)\z/.freeze
   COLUMN_REF_RE2 = /\A((?:(?!___).)+)___(.+)\z/.freeze
   COLUMN_REF_RE3 = /\A((?:(?!__).)+)__(.+)\z/.freeze
+  SPLIT_SYMBOL_CACHE = {}
 
   # Splits the symbol into three parts.  Each part will
   # either be a string or nil.
@@ -226,16 +227,20 @@ module Sequel
   # For columns, these parts are the table, column, and alias.
   # For tables, these parts are the schema, table, and alias.
   def self.split_symbol(sym)
-    case s = sym.to_s
-    when COLUMN_REF_RE1
-      [$1, $2, $3]
-    when COLUMN_REF_RE2
-      [nil, $1, $2]
-    when COLUMN_REF_RE3
-      [$1, $2, nil]
-    else
-      [nil, s, nil]
+    unless v = Sequel.synchronize{SPLIT_SYMBOL_CACHE[sym]}
+      v = case s = sym.to_s
+      when COLUMN_REF_RE1
+        [$1.freeze, $2.freeze, $3.freeze].freeze
+      when COLUMN_REF_RE2
+        [nil, $1.freeze, $2.freeze].freeze
+      when COLUMN_REF_RE3
+        [$1.freeze, $2.freeze, nil].freeze
+      else
+        [nil, s.freeze, nil].freeze
+      end
+      Sequel.synchronize{SPLIT_SYMBOL_CACHE[sym] = v}
     end
+    v
   end
 
   # Converts the given +string+ into a +Date+ object.
